fixed page spacing

--- a/index.css
+++ b/index.css
@@ -29,6 +29,7 @@ body{
     margin: 0px;
     margin-left: -10px;
     min-width: 740px;
+    width: 99.6%;
 }
 
 body img{
